# toy

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  IMPROVEMENTS.md  Makefile  README.md  alembic.ini  docker-compose.yml  docker.env  local.env  pyproject.toml  requirements-test.txt  setup.cfg
alembic/: env.py
alembic/versions/: b5fa438e36c7_create_initial_tables.py  f0e1624050ec_initial_table_creation.py
docker/nginx/: default.conf
docs/: Makefile  conf.py  index.rst
examples/: hello_world_class_handler.py  hello_world_function_handler.py
examples/helloworld/: hello_world_api.py  hello_world_class_handler.py  hello_world_function_handler.py
examples/recipes/: Dockerfile  docker-compose.yml  docker.env  local.env
examples/recipes/alembic/: env.py  script.py.mako
examples/recipes/alembic/versions/: f0e1624050ec_initial_table_creation.py
examples/recipes/recipes/: __main__.py  application.py  handlers.py  models.py  resources.py
examples/recipes/requirements/: local.txt
examples/recipes/tests/: conftest.py  test_api.py  test_database.py
recipes/: __main__.py  application.py  database.py  handlers.py  models.py  recipes.py  resources.py  server.py  storage.py
recipes/framework/: application.py  handlers.py  http.py  routing.py  server.py
requirements/: local.txt  production.txt  test.txt
tests/: conftest.py  test_api.py  test_application.py  test_basic_handler.py  test_database.py  test_handlers.py  test_http.py  test_recipes_models.py  test_resources.py  test_routing.py  test_serializers.py  test_server.py  test_user_models.py
tests/test_toy/: test_application.py  test_handlers.py  test_http.py  test_routing.py
tests_toy/: conftest.py  test_application.py  test_fields.py  test_handlers.py  test_http.py  test_processors.py  test_resources.py  test_routing.py  test_validators.py
toy/: TODO.md  application.py  exceptions.py  fields.py  handlers.py  http.py  processors.py  resources.py  routing.py  serializers.py  server.py  validators.py
toy/staty/: __init__.py  base.py  codes.py  exceptions.py  status_map.py  utils.py
toy/staty/handlers/: requests.py
web/: index.php
